Reorganized html, css and common according to class tutorial
Initially started wrong by adding old css style + old html to the parent index.html, now moved that to direction 1 / created proper direction 1 folder

--- a/index.html
+++ b/index.html
@@ -4,24 +4,10 @@
 		<title>Kinza's Binding</title>
         <meta name="viewport" content="width=device=width, initial-scale=1" />
 		<link href="reset.css" rel="stylesheet">
-		<link href="style.css" rel="stylesheet">
         <link href="common.css" rel="stylesheet">
 	</head>
 	<body>
-		<header>
-		<section>
-			<h2 class="noto-nastaliq-urdu" lang="ur" dir="rtl">کالونائزر سے خالق تک </h2>
-		<h1 class="inter-semibold">
-			Colonizer to Creator
-		</h1>
-			<h2 class="noto-nastaliq-urdu-second-child" lang="ur" dir="rtl">کالونائزر سے خالق تک </h2>
-		</section>
-		<section>
-				<p class="handjet" lang="ur" dir="rtl">
-				میں نوآبادیات کے بارے میں اس مضمون کو سمجھنے کی کوشش کر رہی ہوں۔ ڈیزائن ہر چیز سے منسلک ہے۔ ہمیں اپنے آپ کو کالونائزر سے آزاد کرنا چاہیے۔میں نوآبادیات کے بارے میں اس مضمون کو سمجھنے کی کوشش کر رہی ہوں۔ ڈیزائن ہر چیز سے منسلک ہے۔ ہمیں اپنے آپ کو کالونائزر سے آزاد کرنا چاہیے۔میں نوآبادیات کے بارے میں اس مضمون کو سمجھنے کی کوشش کر رہی ہوں۔ ڈیزائن ہر چیز سے منسلک ہے۔ ہمیں اپنے آپ کو کالونائزر سے آزاد کرنا چاہیے۔میں نوآبادیات کے بارے میں اس مضمون کو سمجھنے کی کوشش کر رہی ہوں۔ ڈیزائن ہر چیز سے منسلک ہے۔ ہمیں اپنے آپ کو کالونائزر سے آزاد کرنا چاہیے۔میں نوآبادیات کے بارے میں اس مضمون کو سمجھنے کی کوشش کر رہی ہوں۔ ڈیزائن ہر چیز سے منسلک ہے۔ ہمیں اپنے آپ کو کالونائزر سے آزاد کرنا چاہیے۔میں نوآبادیات کے بارے میں اس مضمون کو سمجھنے کی کوشش کر رہی ہوں۔ ڈیزائن ہر چیز سے منسلک ہے۔ ہمیں اپنے آپ کو کالونائزر سے آزاد کرنا چاہیے۔میں نوآبادیات کے بارے میں اس مضمون کو سمجھنے کی کوشش کر رہی ہوں۔ ڈیزائن ہر چیز سے منسلک ہے۔ ہمیں اپنے آپ کو کالونائزر سے آزاد کرنا چاہیے۔میں نوآبادیات کے بارے میں اس مضمون کو سمجھنے کی کوشش کر رہی ہوں۔ ڈیزائن ہر چیز سے منسلک ہے۔ ہمیں اپنے آپ کو کالونائزر سے آزاد کرنا چاہیے۔میں نوآبادیات کے بارے میں اس مضمون کو سمجھنے کی کوشش کر رہی ہوں۔ ڈیزائن ہر چیز سے منسلک ہے۔ ہمیں اپنے آپ کو کالونائزر سے آزاد کرنا چاہیے۔میں </p>
-		</section>
-		<section>
-			<h3><em>In Conversation with Daniel Buzon <span class="cursor">|</span> </h3></em>
-		</section>
-		</header>
+		<h1> hi i am so bad at code </h1>
+	</body>
+</html>
 	
