Again reorganizing common and direction 1
Trying to understand how to open it

--- a/direction-1/index.html
+++ b/direction-1/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Kinza's Manuscript</title>
-		<link href="reset.css" rel="stylesheet">
-		<link href="style.css" rel="stylesheet">
+		<title>Thoughts on Buzon's article</title>
+		<link href="../reset.css" rel="stylesheet">
+		<link href="../common.css" rel="stylesheet">
 	</head>
 	<script>
     document.getElementById("scrollTrigger").addEventListener("click", function () {
