--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
         <link href="common.css" rel="stylesheet">
 	</head>
 	<body>
-		<h1> hi i am so bad at code </h1>
+		<h1>hi i am so bad at code</h1>
+		
+		<nav>
+			<ol>
+				<li><a href="./direction-1/index.html">Direction 1</a></li>
+				<li><a href="./direction-2/index.html">Direction 2</a></li>
+				<li><a href="./direction-3/index.html">Direction 3</a></li>
+			</ol>
+		</nav>
+
 	</body>
 </html>
 	
