--- a/direction-1/index.html
+++ b/direction-1/index.html
@@ -7,6 +7,14 @@
 		<link href="style.css" rel="stylesheet">
 	</head>
 	<body>
+		<nav>
+			<ol>
+				<li><a href="../direction-1/index.html">Direction 1</a></li>
+				<li><a href="../direction-2/index.html">Direction 2</a></li>
+				<li><a href="../direction-3/index.html">Direction 3</a></li>
+				<li><a href="../index.html">Home</a></li>
+			</ol>
+		</nav>
 		<header>
 		<section>
 			<h2 class="noto-nastaliq-urdu" lang="ur" dir="rtl">کالونائزر سے خالق تک </h2>
