--- a/direction-1/index.html
+++ b/direction-1/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Thoughts on Buzon's article</title>
-		<link href="../reset.css" rel="stylesheet">
-		<link href="../common.css" rel="stylesheet">
-		<link href="style.css" rel="stylesheet">
+		<title>Second article</title>
+		<link rel="stylesheet" href="../reset.css">
+		<link rel="stylesheet" href="../common.css">
+		<link rel="stylesheet" href="reset.css">
 	</head>
 	<body>
 		<nav>
