--- a/direction-3/index.html
+++ b/direction-3/index.html
@@ -2,9 +2,9 @@
 <html>
 	<head>
 		<title>Second article</title>
-		<link href="../reset.css" rel="stylesheet">
-		<link href="../common.css" rel="stylesheet">
-		<link href="style.css" rel="stylesheet">
+		<link rel="stylesheet" href="../reset.css">
+		<link rel="stylesheet" href="../common.css">
+		<link rel="stylesheet" href="reset.css">
 	</head>
 	<body>
 		<nav>
