--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<title>Kinza's Binding</title>
         <meta name="viewport" content="width=device=width, initial-scale=1" />
-		<link href="reset.css" rel="stylesheet">
-        <link href="common.css" rel="stylesheet">
+		<link rel="stylesheet" href="reset.css">
+        <link rel="stylesheet" href="common.css">
 	</head>
 	<body>
 		<h1>hi i am so bad at code</h1>
