--- a/direction-3/index.html
+++ b/direction-3/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Second article</title>
+		<title>Kinza's Binding</title>
 		<link rel="stylesheet" href="../reset.css">
 		<link rel="stylesheet" href="../common.css">
-		<link rel="stylesheet" href="reset.css">
+		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
 		<nav>
