--- a/direction-2/index.html
+++ b/direction-2/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Kinza's Binding</title>
-		<meta name="viewport" content="width=device=width, initial-scale=1" />
+		<!-- <meta name="viewport" content="width=device=width, initial-scale=1" /> -->
 		<link rel="stylesheet" href="../reset.css">
 		<link rel="stylesheet" href="../common.css">
 		<link rel="stylesheet" href="style.css">
