--- a/direction-1/index.html
+++ b/direction-1/index.html
@@ -2,6 +2,30 @@
 <html>
 	<head>
 		<title>Kinza's Binding</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1" />		<link rel="stylesheet" href="../reset.css">
+		<link rel="stylesheet" href="../common.css">
+		<link rel="stylesheet" href="style.css">
+	</head>
+	<body>
+		<nav>
+			<ol>
+				<li><a href="../direction-1/index.html">Direction 1</a></li>
+				<li><a href="../direction-2/index.html">Direction 2</a></li>
+				<li><a href="../direction-3/index.html">Direction 3</a></li>
+				<li><a href="../index.html">Home</a></li>
+			</ol>
+		</nav>
+		<h1>THE DIRTY PAST - WHITE LAYERS OF MODERNITY</h1>
+			<p>The landscape of the contemporary design world is not as smooth and white as some modernists imagined, but the influence of Adolf Loos's Ornament and Crime, Ludwig Mies van der Rohe's "less is more", and Le Corbusier's whitewash ideal is still very visible in the applied arts. Consider Apple's successful move from the early adopters of the personal computer to the mainstream electronics market by covering their machines in a shiny layer, or the way IKEA conquered the world with their chunky but minimalist design for the masses. Ornaments are still widely considered kitsch and bad taste. The preferred appearance of products is sleek and minimal. Clean modernist aesthetics have thrived in the age of mass-production and developed side by side with the mechanization and automation of industry.</p>
+			<p>Swiss/French architect, urbanist and designer Le Corbusier can be considered one of the founders of the modern aesthetic, bringing many design ideologies together in his influential modernist grand narrative. Taking cues from Ebenezer Howard's The Garden Cities of Tomorrow (1898) and Adolf Loos's Ornament and Crime (1913), among others, Le Corbusier devised a radical, all-encompassing theory of what the modern world should look like and how its inhabitants should look at it. And looking is the key word here. Le Corbusier's central point that shaped his idea of the modernist revolution, is that in the industrial age people grow from appreciating color and decoration, which are "of a sensorial and elementary order [...] suited to simple races, peasants and savages" to preferring harmony and proportion which "incite the intellectual faculties and arrest the man of culture" (Le Corbusier 1986 [1927], 143). The sensation of the physical material is replaced by the rational contemplation of form. Following Loos's argument to remove the decorative element from design, Le Corbusier argued that the modern surface that is thereby created is better suited to the more civilized modern man, and that this is a superior and universal aesthetic that we should strive for.</p>
+			<p>Yet this new, modern aesthetic was not the universal given waiting to happen in the linear development of cultural refinement that Le Corbusier made it seem. It can also be seen as both a very political reaction to the contemporaneous Art Deco style and the earlier Aesthetic Movement, which was considered effeminate, degenerate and decadent by the modernists like Loos and Le Corbusier, and as a quintessential modernist quest for abstraction through self-consciousness and focus on form and material.</p>
+			<p>Le Corbusier did not stop at the dismantling of prior aesthetic preferences, but he took the removal of decoration a step further when he argued for a white layer of paint to replace it. Calling decoration a mask that hides the true nature of the object and intending to cleanse the world of such perversity, he reasoned that by adding a white layer, the proportions of the object are emphasized and any sense of ambiguity is erased. (Wigley 1995)</p>
+	</body>
+</html>
+	
+<!-- <html>
+	<head>
+		<title>Kinza's Binding</title>
 		<meta name="viewport" content="width=device=width, initial-scale=1" />
 		<link rel="stylesheet" href="../reset.css">
 		<link rel="stylesheet" href="../common.css">
@@ -42,15 +66,15 @@
   			<h4 class="hidden-power-structures-urdu" lang="ur" dir="rtl">پوشیدہ طاقت کے ڈھانچے</h4>
 				<div class="two-col">
    					 <!-- English column -->
-    			<div class="col col-en">
-      				<p>For all of the progress proclaimed by evangelists, little has changed from the previous century for design today. Designers still are overwhelmingly white with most executive positions continuing to be occupied by the 36% minority of men within the industry. This demographic truth, however, reflects a more urgent issue that manifests itself in structures that reify its status quo.</p>
+    			<!-- <div class="col col-en"> -->
+      				<!-- <p>For all of the progress proclaimed by evangelists, little has changed from the previous century for design today. Designers still are overwhelmingly white with most executive positions continuing to be occupied by the 36% minority of men within the industry. This demographic truth, however, reflects a more urgent issue that manifests itself in structures that reify its status quo.</p>
       				<p>In spite of supposed attempts at diversifying the industry, entry is barred by arbitrary certification, exorbitant costs for design boot camps, and the saturation of work primarily to be reserved in rapidly gentrified urban centers.The consequences of this phenomenon reveal itself devastating. Communities are uprooted, socioeconomic mobility stagnates, and the original community members get pushed to the bottom, if not already neglected into destitute.</p>
       				<p>TThis form of colonialism however was never unique to design nor the tech giants which have co-opted it. We have seen in modern history how the extraction of wealth takes many forms: the pillaging of indigenous lands, cultural appropriation, and wage theft which its victims today continue to be under Stockholm syndrome induced by their masters.</p>
       				<p>Instead, the current state of design is simply the digitally updated version of Eurocentric design doctrine and practice. The prescriptive nature of Modernism never escaped contemporary conversation, rather it became one of many rebrands in the 21st century to co-opt the weaponization of design. Indeed, Modernism has undergone a rebrand and today is marketed as “Design Thinking.”</p>
-   				 </div>
+   				 </div> -->
 
     				<!-- Urdu column -->
-    			<div class="col col-ur" lang="ur" dir="rtl">
+    			<!-- <div class="col col-ur" lang="ur" dir="rtl">
       				مبشرین کی طرف سے اعلان کردہ تمام پیش رفت کے لیے، آج ڈیزائن کے لیے پچھلی صدی سے بہت کم تبدیلی آئی ہے۔ ڈیزائنرز اب بھی بہت زیادہ سفید فام ہیں اور زیادہ تر ایگزیکٹو عہدوں پر صنعت میں مردوں کی ۳۶% اقلیت کا قبضہ جاری ہے۔ تاہم، یہ آبادیاتی سچائی ایک زیادہ فوری مسئلہ کی عکاسی کرتی ہے جو اپنے آپ کو ان ڈھانچے میں ظاہر کرتی ہے جو اس کے جمود کو بحال کرتی ہیں۔</p>
      				صنعت کو متنوع بنانے کی مبینہ کوششوں کے باوجود، من مانی سرٹیفیکیشن، ڈیزائن بوٹ کیمپس کے لیے بے تحاشہ اخراجات، اور کام کی سنترپتی کو بنیادی طور پر تیزی سے نرم شہری مراکز میں محفوظ کرنے کے ذریعے روک دیا گیا ہے۔ اس رجحان کے نتائج خود کو تباہ کن ظاہر کرتے ہیں۔ کمیونٹیز اکھڑ جاتی ہیں، سماجی و اقتصادی نقل و حرکت جمود کا شکار ہو جاتی ہے، اور کمیونٹی کے اصل ممبران کو نیچے کی طرف دھکیل دیا جاتا ہے، اگر انہیں پہلے ہی بے سہارا نہیں بنایا گیا تو۔</p>
       				نوآبادیاتی نظام کی یہ شکل کبھی بھی ڈیزائن کے لیے منفرد نہیں تھی اور نہ ہی ٹیک جنات جنہوں نے اس کا انتخاب کیا ہے۔ ہم نے جدید تاریخ میں دیکھا ہے کہ کس طرح دولت کا حصول کئی شکلیں اختیار کرتا ہے: مقامی زمینوں کی لوٹ مار، ثقافتی تخصیص، اور اجرت کی چوری جس کا شکار آج بھی اپنے آقاؤں کے ذریعہ سٹاک ہوم سنڈروم کی زد میں ہیں۔</p>
@@ -58,10 +82,10 @@
    				</div>
   				</div>
 			</article>
-	</main>
+	</main> -->
 
-	<footer>
+	<!-- <footer>
 		<small>(c) 2025 - Kinza Ghanchi </small>
 	</footer>
 	</body>
-</html>
+</html> --> -->
