--- a/direction-1/index.html
+++ b/direction-1/index.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html>
 	<head>
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Jersey+10&display=swap" rel="stylesheet">
 		<title>Kinza's Binding</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />		<link rel="stylesheet" href="../reset.css">
 		<link rel="stylesheet" href="../common.css">
