Re adjusting direction 3 html
Changing idea to a bento box theme of sorts

--- a/direction-3/index.html
+++ b/direction-3/index.html
@@ -1,21 +1,86 @@
 <!doctype html>
 <html>
-	<head>
-		<title>Kinza's Binding</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1" />		<link rel="stylesheet" href="../reset.css">
-		<link rel="stylesheet" href="../common.css">
-		<link rel="stylesheet" href="style.css">
-	</head>
-	<body>
+
+<head>
+	<title> Kinza's Binding </title>
+	<link rel="stylesheet" href="../reset.css">
+	<link rel="stylesheet" href="../common.css">
+	<link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+	<section>
 		<nav>
 			<ol>
-				<li><a href="../direction-1/index.html">Direction 1</a></li>
-				<li><a href="../direction-2/index.html">Direction 2</a></li>
-				<li><a href="../direction-3/index.html">Direction 3</a></li>
-				<li><a href="../index.html">Home</a></li>
+				<div class="left-bar">
+					<li><a href="../index.html">Back to home</a></li>
+				</div>
+				<div class="right-bar">
+					<li><a href="../direction-1/index.html">Direction 1</a></li>
+					<li><a href="../direction-2/index.html">Direction 2</a></li>
+					<li><a href="../direction-3/index.html">Direction 3</a></li>
+				</div>
+
 			</ol>
 		</nav>
-		<h1> so afraid </h1>
-	</body>
-</html>
-	
+
+		<div class="single-box">
+			<header>
+				<h1 class="title">
+					<span class="block"> The </span>
+					<span class="script"> DIRTY <br> Past</span>
+				</h1>
+			</header>
+			<div class="bottom-right">WHITE LAYERS OF MODERNITY</div>
+		</div>
+	</section>
+<div class="container">
+  <div class="row row-a">
+    <div class="box left-box">
+      The landscape of the contemporary design world is not as smooth and white as some modernists imagined, but the influence of Adolf Loos's Ornament and Crime, Ludwig Mies van der Rohe's "less is more", and Le Corbusier's whitewash ideal is still very visible in the applied arts.
+	     <br> 
+		 <br><br>
+		 Consider Apple's successful move from the early adopters of the personal computer to the mainstream electronics market by covering their machines in a shiny layer.
+	</div>
+    <div class="column column-a">
+      <div class="box top-box">
+		        Or the way IKEA conquered the world with their chunky but minimalist design for the masses.
+      </div>
+      <div class="box bottom-box">
+      Ornaments are still widely considered kitsch and bad taste.
+      </div>
+    </div>
+  </div>
+  <div class="row row-b">
+    <div class="box left-box" style="text-align: center; align-items: center;">
+		        Minimalist products appeal to consumers seeking clarity.
+    </div>
+    <div class="box right-box">
+      The preferred appearance of products is sleek and minimal. Clean modernist aesthetics have thrived in the age of mass-production and developed side by side with the mechanization and automation of industry.
+    </div>
+  </div>
+  <div class="row row-c">
+    <div class="column column-a">
+      <div class="box top-box">
+        Minimalist products appeal to consumers seeking clarity.
+      </div>
+      <div class="box bottom-box">
+        They emphasize functionality over decoration.
+      </div>
+    </div>
+    <div class="box right-box">
+      The industrial age, mechanization, and automation allowed modernist aesthetics to reach mass markets efficiently.
+    </div>
+  </div>
+  <div class="box full-width-box">
+    Swiss/French architect, urbanist and designer Le Corbusier can be considered one of the founders of the modern aesthetic, bringing many design ideologies together in his influential modernist grand narrative. Taking cues from Ebenezer Howard's The Garden Cities of Tomorrow (1898) and Adolf Loos's Ornament and Crime (1913), among others, Le Corbusier devised a radical, all-encompassing theory of what the modern world should look like and how its inhabitants should look at it.
+  </div>
+  <div class="row row-e">
+  <div class="box">
+    Le Corbusier emphasized that modern design should move from decoration to harmony and proportion, replacing sensory material with rational form.
+  </div>
+  <div class="box">
+    Modern surfaces, following Loos's ideas, suit the civilized modern man and reflect a universal aesthetic ideal.
+  </div>
+</div>
+
