Tweaks to sizing and nav bar

--- a/direction-3/index.html
+++ b/direction-3/index.html
@@ -12,19 +12,14 @@
 	<section>
 		<nav>
 			<ol>
-				<div class="left-bar">
-					<li><a href="../index.html">Back to home</a></li>
-				</div>
-				<div class="right-bar">
-					<li><a href="../direction-1/index.html">Direction 1</a></li>
-					<li><a href="../direction-2/index.html">Direction 2</a></li>
-					<li><a href="../direction-3/index.html">Direction 3</a></li>
-				</div>
-
+				<li><a href="../direction-1/index.html">Direction 1</a></li>
+				<li><a href="../direction-2/index.html">Direction 2</a></li>
+				<li><a href="../direction-3/index.html">Direction 3</a></li>
+				<li><a href="../index.html">Home</a></li>
 			</ol>
 		</nav>
-
-		<div class="single-box">
+		
+		<!-- <div class="single-box">
 			<header>
 				<h1 class="title">
 					<span class="block"> The </span>
@@ -32,7 +27,7 @@
 				</h1>
 			</header>
 			<div class="bottom-right">WHITE LAYERS OF MODERNITY</div>
-		</div>
+		</div> -->
 	</section>
 <div class="container">
   <div class="row row-a">
