--- a/direction-3/index.html
+++ b/direction-3/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!-- <!doctype html>
 <html>
 
 <head>
@@ -19,7 +19,7 @@
 			</ol>
 		</nav>
 		
-		<!-- <div class="single-box">
+		<div class="single-box">
 			<header>
 				<h1 class="title">
 					<span class="block"> The </span>
@@ -28,7 +28,7 @@
 			</header>
 			<div class="bottom-right">WHITE LAYERS OF MODERNITY</div>
 		</div> -->
-	</section>
+	<!-- </section>
 <div class="container">
   <div class="row row-a">
     <div class="box left-box">
@@ -77,5 +77,5 @@
   <div class="box">
     Modern surfaces, following Loos's ideas, suit the civilized modern man and reflect a universal aesthetic ideal.
   </div>
-</div>
+</div> -->
 
