--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 	<head>
 		<title>Kinza's Binding</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1" />		<link rel="stylesheet" href="reset.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1"/>		
+		<link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="common.css">
 	</head>
 	<body>
